Fix bugster chat pre tag spacing

--- a/mkdocs_bs5/assets/scss/style.scss
+++ b/mkdocs_bs5/assets/scss/style.scss
@@ -740,10 +740,6 @@ table .table-light th {
 				font-size: 13px;
 				padding: 15px;
 
-				&:last-child {
-					margin-bottom: 0;
-				}
-
 				code {
 					background-color: #2E3440;
 
